[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/LevelCloud.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Cloud.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Kanit-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/CloudParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Car.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/CarExplodeParticles.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Rocket.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/CarAlarm.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/SkyBg.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/SkyBgEnd.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Thoughts.tscn" type="PackedScene" id=12]
[ext_resource path="res://Images/Clock.png" type="Texture" id=13]
[ext_resource path="res://Images/ProgressBack.png" type="Texture" id=14]
[ext_resource path="res://Images/Zzz.png" type="Texture" id=15]
[ext_resource path="res://Images/ProgressBar.png" type="Texture" id=16]
[ext_resource path="res://Images/ProgressOver.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[node name="LevelCloud" type="Node"]
script = ExtResource( 2 )
Cloud = ExtResource( 3 )
CloudParticles = ExtResource( 5 )
CarExplodeParticles = ExtResource( 7 )
Rocket = ExtResource( 8 )
Car = ExtResource( 6 )
CarAlarm = ExtResource( 9 )

[node name="SkyBg" parent="." instance=ExtResource( 10 )]

[node name="SkyBgEnd" parent="." instance=ExtResource( 11 )]
position = Vector2( 1074, -2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 347.446, 225 )

[node name="FallSpeed" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.0
margin_right = 138.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Fall Speed: X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="CarTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="RocketTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="FallOffBedTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Thoughts" parent="." instance=ExtResource( 12 )]
position = Vector2( 1100.79, 950.102 )

[node name="WakeUpIcon1" type="Sprite" parent="."]
position = Vector2( 13, 0 )
texture = ExtResource( 13 )
offset = Vector2( 155.253, 36.527 )

[node name="WakeUpIcon2" type="Sprite" parent="."]
position = Vector2( 548.484, 36.527 )
texture = ExtResource( 15 )

[node name="Progress" type="TextureProgress" parent="."]
margin_left = 203.579
margin_top = 22.3816
margin_right = 503.579
margin_bottom = 54.3816
value = 50.0
texture_under = ExtResource( 14 )
texture_over = ExtResource( 17 )
texture_progress = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="at_target_y" from="SkyBgEnd" to="." method="_on_SkyBgEnd_at_target_y"]
[connection signal="collide_car" from="Player" to="." method="_on_Player_collide_car"]
[connection signal="collide_cloud" from="Player" to="." method="_on_Player_collide_cloud"]
[connection signal="first_force_move_done" from="Player" to="." method="_on_Player_first_force_move_done"]
[connection signal="second_force_move_done" from="Player" to="." method="_on_Player_second_force_move_done"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_CloudTimer_timeout"]
[connection signal="timeout" from="CarTimer" to="." method="_on_CarTimer_timeout"]
[connection signal="timeout" from="RocketTimer" to="." method="_on_RocketTimer_timeout"]
[connection signal="timeout" from="FallOffBedTimer" to="." method="_on_FallOffBedTimer_timeout"]
[connection signal="button_clicked" from="Thoughts" to="." method="_on_Thoughts_button_clicked"]
[connection signal="fadeout_done" from="Thoughts" to="." method="_on_Thoughts_fadeout_done"]
